# topdown-shooter

./: .gitignore  CMakeLists.txt
cmake/: FindBox2D.cmake  FindSDL2.cmake
src/engine/headers/: animatedobject.h  assetsmanager.h  contactlistener.h  inputmanager.h  moveableobject.h  rendermanager.h  spriteobject.h
src/engine/source/: animatedobject.cpp  assetsmanager.cpp  contactlistener.cpp  inputmanager.cpp  moveableobject.cpp  rendermanager.cpp  spriteobject.cpp
src/game/: main.cpp
src/game/headers/: bullet.h  game.h  globals.h  helper.h  player.h  wall.h
src/game/source/: bullet.cpp  game.cpp  helper.cpp  player.cpp  wall.cpp
